Fixed issue where one could not split specific imports based on specific TargetFrameworks.
Signed-off-by: AraHaan <seandhunt_7@yahoo.com>

--- a/src/ImplicitNamespaceImportGenerator/Directory.Build.props
+++ b/src/ImplicitNamespaceImportGenerator/Directory.Build.props
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>true</IsPackable>
-    <Version>1.0.0</Version>
-    <PackageReleaseNotes>Initial Release.</PackageReleaseNotes>
+    <Version>1.0.1</Version>
+    <PackageReleaseNotes>Fixed issue where one can attempt to import namespaces that does not exist.</PackageReleaseNotes>
     <Copyright>Copyright (c) 2021</Copyright>
     <!-- Suppresses the warnings about the package not having assemblies in lib/*/.dll.-->
     <NoPackageAnalysis>true</NoPackageAnalysis>
